apps/health/influxdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: health
spec:
  selector:
    app: influxdb
  ports:
    - name: http
      port: 8086
      targetPort: http
